--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h1 {
   background-color: white;
   position: absolute;
   top: 100px;
-  right: -10px;
+  right: 0;
   z-index: 9;
   overflow-y: scroll;
   border-top-left-radius: 30px;
