--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@
   justify-content: center;
 }
 
-#flywheel h1 {
+#flywheel > h1:first-child {
   position: absolute;
   left: 20px;
-  top: 0;
-
+  top: 80px;
+  z-index: 999;
+  max-width: 450px;
+  opacity: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,13 +49,13 @@
   position: absolute;
   width: 740px;
   height: 740px;
-  top: 70px;
+  top: 20px;
 }
 
 #flywheel #description_text_block {
   width: 400px;
   position: absolute;
-  top: 150px;
+  top: 90px;
   left: 20px;
   max-height: 400px;
   z-index: 9;
@@ -65,7 +67,7 @@
   background-color: white;
   position: absolute;
   top: 100px;
-  right: 0;
+  right: -370px;
   z-index: 9;
   overflow-y: auto;
   border-top-left-radius: 30px;
@@ -74,7 +76,7 @@
 }
 
 #flywheel #instructions_text_block > header {
-  background-color: #dc5d2a;
+  background-color: #727272;
   min-height: 60px;
 }
 
