--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 #flywheel {
   padding: 1rem;
   font-family: "Montserrat", sans-serif;
+  font-weight: 300 !important;
   min-height: 860px;
   background-color: #efefef;
+  color: #4d4d4d;
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+#flywheel strong {
+  font-weight: 500;
 }
 
 #flywheel > h1:first-child {
@@ -18,6 +24,7 @@
   opacity: 0;
   display: flex;
   align-items: center;
+  font-weight: 300;
   justify-content: center;
 }
 
