--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 #flywheel {
   padding: 1rem;
   font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
   font-weight: 300 !important;
   min-height: 860px;
   background-color: #efefef;
@@ -24,8 +25,11 @@
   opacity: 0;
   display: flex;
   align-items: center;
-  font-weight: 300;
   justify-content: center;
+}
+
+#flywheel h1 {
+  font-weight: 500;
 }
 
 #areaBullet {
